tests/ui/allocator/two-allocators.stderr
error: cannot define multiple global allocators
  --> $DIR/two-allocators.rs:6:1
   |
LL | static A: System = System;
   | -------------------------- previous global allocator defined here
LL | #[global_allocator]
   | ------------------- in this procedural macro expansion
LL | static B: System = System;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot define a new global allocator
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `#[global_allocator]`

error: aborting due to previous error

